test_src/compiler_errors/vars/UninitializedVarError8.b
class UninitializedVarError8 {
    void test() {
        Int bar;
        for (Int i = 0; i < 5; bar = 3) {
            println(i);
            i++;
        }
        println(bar);
    }
}
